@@ -1,3 +1,9 @@
+1999-09-03  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/gconfd.c: Every hour or so, hibernate all contexts that
+	haven't been accessed in 45 minutes. Make some assorted changes
+	to support that.
+
 1999-09-02  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconf-internals.h, gconf/gconf-internals.c: Add a new
